# ralph-eval

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  pixi.toml  pyproject.toml  pyrightconfig.json
.claude/: settings.json
.claude/agents/: thoughts-locator.md
.claude/commands/: create_worktree.md  ralph_impl.md  research_codebase.md
.claude/skills/aesthetic-tui/: SKILL.md
.claude/skills/aesthetic-tui/references/: click-patterns.md  rich-components.md
.claude/skills/aesthetic-tui/scripts/: example_app.py
.claude/skills/atomic-agents/: SKILL.md
.claude/skills/cadquery-skill/: SKILL.md
.claude/skills/coding-agent/: SKILL.md
.claude/skills/data_engineering/: SKILL.md
.claude/skills/deltalake/: SKILL.md
.claude/skills/mineru/: CHECKLIST.md  EVALS.md  PATTERNS.md  SKILL.md  TEMPLATES.md  TROUBLESHOOTING.md
.claude/skills/pixi-skill/: SKILL.md
.claude/skills/testing-python/: CHECKLIST.md  EVALS.md  PATTERNS.md  SKILL.md  TEMPLATES.md
.config/: .dprint.jsonc  .pytest.toml  .ruff-src.toml  .ruff-tests.toml  .ruff.toml  .typos.toml  run_silent.sh  run_silent_lint.sh  run_silent_typecheck.sh  tbump.toml
.devcontainer/: devcontainer.json
.github/: actionlint.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
scripts/: CLEANUP_PROMPT.md  IMPLEMENTATION_PROMPT.md  PLANNING_PROMPT.md  PROMPT.md  context_managed_loop.sh  implementation_loop.sh  init-template.py  loop.sh  planning_loop.sh  release.py
src/template_project/: __init__.py
tests/: test_1.py
(+13 files in other folders)
