[project]
authors = [{name = "Logan Lang", email = "lllangWV@gmail.com"}]
classifiers = ["Programming Language :: Python :: 3"]
description = "Repo for experimenting with ralph-loops with different models and harnesses"
keywords = []
license = "MIT"
license-files = ["LICENSE"]
name = "ralph-eval"
readme = { file = "README.md", content-type = "text/markdown" } # Ensure this matches the file used
requires-python = ">=3.10"

dynamic = ["version"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.version]
source = "vcs"
[tool.hatch.version.raw-options]
local_scheme = "no-local-version"
search_parent_directories = true

[tool.hatch.build.hooks.vcs]
version-file = "src/ralph_eval/_version.py"
